<resources>
    <string name="app_name">Hashtechs Task</string>
    <string name="search">Search</string>
    <string name="images">Images</string>
    <string name="my_favourite">My Favourite</string>
    <string name="results">Results</string>
    <string name="search_your_image">Search your image ...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>